--- a/src/App.css
+++ b/src/App.css
@@ -59,15 +59,19 @@ input[type="button"]:hover {
 }
 
 .countdown {
-  font-size: 1.5em;
+  font-size: 5em;
   margin-top: 20px;
   color: #fff;
 }
 .form-control {
-  max-width: 600px;
+  max-width: 1600px;
   margin: 0 auto;
   padding: 20px;
   border-radius: 8px;
+}
+.countdown-time {
+  font-size: 1.5em;
+  top: 20%;
 }
 
 .label-input-container {
