--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,11 @@
 body {
-  background: linear-gradient(to right, #150050, #610094);
+  background: linear-gradient(to bottom right, #000,#150050, #610094);
   margin: 0;
-  font-family:Arial, Helvetica, sans-serif;
+  font-family: Arial, Helvetica, sans-serif;
 }
 #root {
   width: 100%;
+  height:100%;
 }
 .navbar {
   position: fixed;
@@ -125,4 +126,27 @@ circle {
   color: #fff;
   margin-left: 70px;
   align-items: center;
+}
+
+.logoName-img {
+  margin-right: 700px;
+}
+
+.rectangle {
+  position: absolute;
+  width: 80px;
+  height: 30px; 
+  background-color: transparent;
+  border: 1px solid #fff; 
+  top: 48px; 
+  left: 149px; 
+  z-index: 10; 
+}
+
+.mood-map {
+
+}
+
+.line-graph {
+  
 }
