--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,7 @@ body {
   background: linear-gradient(to bottom right, #000,#150050, #610094);
   margin: 0;
   font-family: Arial, Helvetica, sans-serif;
+  min-height: 100vh;
 }
 #root {
   width: 100%;
@@ -83,7 +84,7 @@ input[type="button"]:hover {
 
 label {
   font-weight: bold;
-  margin-right: 10px; /* Add some space between label and input */
+  margin-right: 10px; 
 }
 
 .form-control {
@@ -95,13 +96,24 @@ label {
 
 
 .countdown {
-  font-size: 4em; 
+  font-size: 8em;
+  font-weight: bold;
+  margin-top: 20px;
+  color: #fff;
+  width: 100%;
+}
+
+.countdown-time {
+  color:white;
+  font-size: 20px; 
   text-align: center;
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  z-index: 1;
 }
+
 
 .support-container p {
   color: #fff;
@@ -140,13 +152,23 @@ circle {
   border: 1px solid #fff; 
   top: 48px; 
   left: 149px; 
-  z-index: 10; 
+  z-index: 1; 
 }
 
 .mood-map {
-
+  color: white;
+  text-align:center;
+  position: absolute;
+  top: 100px;
+  right: 500px;
+  z-index: 1;
 }
 
 .line-graph {
-  
+  color: white;
+  text-align:center;
+  position: absolute;
+  top: 100px;
+  right: 100px;
+  z-index: 1;
 }
