--- a/src/App.css
+++ b/src/App.css
@@ -16,6 +16,7 @@ body {
   background-color: transparent;
   color: #fff;
   padding: 10px;
+  margin-bottom: 100px;
 }
 .navbar a {
   color: #fff;
@@ -70,6 +71,7 @@ input[type="button"]:hover {
   margin: 0 auto;
   padding: 20px;
   border-radius: 8px;
+  display: flex;
 }
 .countdown-time {
   font-size: 1.5em;
@@ -92,6 +94,7 @@ label {
   justify-content: flex-start;
   align-items: center;
   flex-direction: column;
+  margin-right:100px;
 }
 
 
@@ -159,7 +162,7 @@ circle {
   color: white;
   text-align:center;
   position: absolute;
-  top: 100px;
+  top: 190px;
   right: 500px;
   z-index: 1;
 }
@@ -168,7 +171,28 @@ circle {
   color: white;
   text-align:center;
   position: absolute;
-  top: 100px;
+  top: 190px;
   right: 100px;
   z-index: 1;
+}
+
+.form-control {
+  display: flex;
+  align-items: center;
+}
+
+.label-input-container {
+  display: flex;
+  align-items: center;
+}
+
+.setGamingTimeButton {
+  margin-right: -650px; /* Adjust as needed to add some spacing between the button and the input */
+  margin-top: -60px;
+  background-color: transparent;
+  color: white;
+  border: 1px solid white; /* Add a white border for better visibility */
+  padding: 10px 20px; /* Adjust padding as needed */
+  font-size: 16px; /* Adjust font size as needed */
+  cursor: pointer;
 }
