--- a/src/App.css
+++ b/src/App.css
@@ -167,6 +167,15 @@ circle {
   z-index: 1;
 }
 
+.cur-heart-rate {
+  color: white;
+  text-align:center;
+  position: absolute;
+  top: 300px;
+  left: 350px;
+  z-index: 1;
+}
+
 .line-graph {
   color: white;
   text-align:center;
